Bug 1272999 - fixing multiline text clipping in console on Windows. r=bgrins

--- a/devtools/client/themes/webconsole.css
+++ b/devtools/client/themes/webconsole.css
@@ -408,6 +408,7 @@ a {
 .jsterm-input-node,
 .jsterm-complete-node {
   border: none;
+  padding: 0;
   padding-inline-start: 20px;
   margin: 0;
   -moz-appearance: none;
